[duyuqian] fix: found and modified a location overflow of div

--- a/main.css
+++ b/main.css
@@ -157,7 +157,6 @@ a {
 }
 
 .detail2 {  
-    padding: 5px;
     background-color: rgba(209, 209, 209, 0.726);
 }
 
